Fixed makefile to only compile v.label.sa if ft is enabled.
git-svn-id: https://svn.osgeo.org/grass/grass/branches/develbranch_6@37574 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/vector/Makefile
+++ b/vector/Makefile
@@ -28,7 +28,6 @@ SUBDIRS = \
 	v.kcv \
 	v.kernel \
 	v.label \
-	v.label.sa \
 	v.lrs \
 	v.proj \
 	v.mkgrid \
@@ -90,6 +89,11 @@ ifneq ($(strip $(TCLTKLIBS)),)
     SUBDIRS += $(TCLTKBASED)
 endif
 
+REQUIRESFT = v.label.sa
+
+ifneq ($(strip $(FTLIB)),)
+    SUBDIRS += $(REQUIRESFT)
+endif
 
 OPENDWGBASED = v.in.dwg
 
